# rkdeveloptool

./: .gitignore  CMakeLists.txt  Readme.txt
src/: RKBoot.cpp  RKComm.cpp  RKDevice.cpp  RKImage.cpp  RKLog.cpp  RKScan.cpp  crc.cpp  main.cpp
src/inc/: DefineHeader.h  Endian.h  Property.hpp  RKBoot.h  RKComm.h  RKDevice.h  RKImage.h  RKLog.h  RKScan.h  boot_merger.h  gpt.h
